@@ -1,6 +1,6 @@
 Package: DSL
 Version: 0.1-0
-Date: 2011-11-18
+Date: 2011-11-27
 Title: Distributed Storage and List
 Description: A package providing functions and methods for handling distributed storage (DStorage) and lists (DLlist). It implements an abstract DList class for storing large list-type objects in a distributed manner. In doing so it uses a well defined storage backend implemented based on the DStorage class. It allows for processing such DLists on distributed systems efficiently.
 Authors@R: c(person("Ingo", "Feinerer", role = "aut"), person("Stefan", "Theussl", role = c("aut", "cre"), email = "Stefan.Theussl@wu.ac.at"))
