@@ -1,11 +1,11 @@
 Package: tm.plugin.dc
 Version: 0.2-0
-Date: 2011-11-23
+Date: 2011-11-27
 Title: Text Mining Distributed Corpus Plug-In
 Description: A plug-in for the text mining framework tm to support text mining 
              in a distributed way. The package provides a convinient interface for
              handling distributed corpus objects based on distributed list objects.
 Authors@R: c(person("Ingo", "Feinerer", role = "aut"), person("Stefan", "Theussl", role = c("aut", "cre"), email = "Stefan.Theussl@wu.ac.at"))
 License: GPL-3
-Depends: DSL, tm (>= 0.5-6)
+Depends: DSL, tm (>= 0.5-6.8)
 Imports: slam (>= 0.1-22)
