@@ -1,12 +1,12 @@
-\name{tm_map.DistributedCorpus}
-\alias{tm_map.DistributedCorpus}
+\name{tm_map.DCorpus}
+\alias{tm_map.DCorpus}
 \title{Transformations on Distributed Corpora}
 \description{
   Interface to apply transformation functions to distributed
   corpora. See \code{\link[tm]{tm_map}} in \pkg{tm} for more information.
 }
 \usage{
-\method{tm_map}{DistributedCorpus}(x, FUN, \dots, useMeta = FALSE, lazy = FALSE)
+\method{tm_map}{DCorpus}(x, FUN, \dots, useMeta = FALSE, lazy = FALSE)
 }
 \arguments{
   \item{x}{A distributed corpus.}
@@ -23,7 +23,7 @@
 }
 \examples{
 data("crude")
-tm_map(as.DistributedCorpus(crude), tolower)
+tm_map(as.DCorpus(crude), tolower)
 }
 \seealso{
   \code{\link[tm]{getTransformations}} for available transformations.
