@@ -1,8 +1,10 @@
 2011-11-29  Stefan Theussl  <stefan.theussl@wu.ac.at>
 
-	* R/streaming.R (hive_stream): accepts now a streaming_args argument
+	* R/streaming.R (hive_stream): accepts now a streaming_args argument.
 	* man/hive_stream.Rd (hive_stream): describes the new
-	streaming_args argument
+	streaming_args argument.
+	* R/handler.R (hive_default_nreducer): calculation of optimal
+	reducer size changed to round(n_slaves/1.5).
 
 2011-11-21  Stefan Theussl  <stefan.theussl@wu.ac.at>
 
